# aegis-q

./: Cargo.toml  README.md  SPEC.md  __dummy__.ipynb
core/: Cargo.toml  README.md
core/benches/: aegis_q_bench.rs
core/src/: encrypt.rs  lib.rs  round.rs  state.rs
core/tests/: constant_time.rs  kat.rs  property.rs
licensing/: Cargo.toml  README.md
licensing/src/: lib.rs
messenger/: Cargo.toml  README.md
messenger/src/: lib.rs
messenger/src/ratchet/: mod.rs
messenger/src/storage/: mod.rs
pq-primitives/: Cargo.toml  README.md
pq-primitives/src/: lib.rs
pq-primitives/src/eccodes/: mod.rs
pq-primitives/src/lattice/: mod.rs
pq-primitives/src/zk/: mod.rs
pq-primitives/tests/: round_tests.rs  timing.rs
transport/: Cargo.toml  README.md
transport/src/: lib.rs
transport/src/framing/: mod.rs
transport/src/quic/: mod.rs
transport/src/vpn/: mod.rs
utils/: Cargo.toml  README.md
utils/src/: kdf.rs  lib.rs
utils/src/memory/: mod.rs
utils/src/rng/: mod.rs
