[workspace]
members = [
    "core",
    "pq-primitives",
    "utils",
    "transport",
    "messenger",
    "licensing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aegis-Q Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core cryptographic dependencies
sha3 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

