[package]
name = "aegis-q-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pq-primitives = { path = "../pq-primitives" }
utils = { path = "../utils" }
sha3 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "aegis_q_bench"
harness = false

[features]
small_params = []

