[package]
name = "licensing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aegis-q-core = { path = "../core" }
pq-primitives = { path = "../pq-primitives" }
utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }

