[package]
name = "pq-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
utils = { path = "../utils" }
sha3 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
small_params = []

